--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="style.css">
-</head>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+    	<script src="jquery.min.js"></script>
+    	<script src="app.js"></script>
+    	<title>Hello World</title>
+	</head>
 <body>
 
 <div class = "a">
