--- a/web/index.html
+++ b/web/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="style.css">
-    	<script src="jquery.min.js"></script>
-    	<script src="app.js"></script>
+		<link rel="stylesheet" type="text/css" href="style.css"/>
+    	<!-- <script src="jquery.min.js"></script>
+    	<script src="app.js"></script> -->
     	<title>Hello World</title>
 	</head>
-<body>
-
-<div class = "a">
-<h1>MyClient site</h1>
-</div>
-<p>This is a paragraph.</p>
-
-</body>
+	<body>
+		<div class="a">
+			<h1>MYCLIENT</h1>
+		</div>
+		<div class="b">
+			<!-- QR CODE HERE -->
+		</div>
+		<p>Present this code</p>
+	</body>
 </html>
