--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,29 @@
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 		<script src="../node_modules/qrcode/build/qrcode.min.js"></script>
 		<script>
+			var http = require("http");
+
+			var options = {
+			    host: "lfg-idclient.herokuapp.com",
+			    path: "/user/token/generate",
+			    method: "GET",
+			};
+
+			var req = http.request(options, function (res) {
+			    var token = "";
+
+			    res.on("data", function (data) {
+			        token += data;
+			        // save all the data from response
+			    });
+			    res.on("end", function () {
+			        console.log(responseString); 
+			        // print to console when response ends
+			    });
+			});
+
 			window.createQR = function() {
-				QRCode.toCanvas(document.getElementById('canvas'), 'sample text', {
+				QRCode.toCanvas(document.getElementById('canvas'), token, {
 					width: 340,
 					height: 340
 				}, function (error) {
@@ -13,6 +34,57 @@
 						console.log('success!');
 				});
 			};
+
+
+			var connection = new WebSocket('ws://html5rocks.websocket.org/echo', ['soap', 'xmpp']);
+
+			// When the connection is open, send some data to the server
+			connection.onopen = function () {
+			  connection.send('Ping'); // Send the message 'Ping' to the server
+			};
+
+			// Log errors
+			connection.onerror = function (error) {
+			  console.log('WebSocket Error ' + error);
+			};
+
+			connection.onclose = function() {
+				connection = WebSocket('ws://html5rocks.websocket.org/echo', ['soap', 'xmpp']);
+			}
+
+			// Log messages from the server
+			connection.onmessage = function (e) {
+			  var promptString = e.data;
+			  // Get the modal
+			  	document.getElementById("prompt-body").innerHTML = promptString;
+
+				var modal = document.getElementById('myModal');
+				var accept = document.getElementById('accept');
+				var decline = document.getElementById('decline');
+				// Get the <span> element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
+
+				modal.style.display = "block";
+
+				var accepted = "decline";
+
+				accept.onclick = function() {
+					accepted = "accept";
+				}
+				decline.onclick = function() {
+					accepted = "decline";
+				}
+
+				// When the user clicks on <span> (x), close the modal
+				span.onclick = function() {
+				  modal.style.display = "none";
+				}
+				connection.send(accepted);
+
+			};
+
+
+
 		</script> 
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     	<!-- <script src="jquery.min.js"></script>
@@ -22,6 +94,34 @@
 	<body onload="createQR();">
 		<div class="a">
 			<h1>My ID</h1>
+		</div>
+		<!-- Button trigger modal -->
+		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+		  Launch demo modal
+		</button>
+
+		<!-- Modal -->
+		<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <h5 class="modal-title" id="exampleModalLabel">Information request:</h5>
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Decline">
+		          <span aria-hidden="true">&times;</span>
+		        </button>
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Accept">
+		          <span aria-hidden="true">&times;</span>
+		        </button>
+		      </div>
+		      <div class="modal-body">
+		      	<p1 id="prompt-body"></p1>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" id="accept" class="btn btn-primary" data-dismiss="modal">Accept</button>
+		        <button type="button" id="decline" class="btn btn-primary" data-dismiss="modal">Decline</button>
+		      </div>
+		    </div>
+		  </div>
 		</div>
 		<canvas id="canvas"></canvas>
 		<p>Present this code to confirm your information</p>
