--- a/userapp/web/index.html
+++ b/userapp/web/index.html
@@ -4,6 +4,30 @@
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 		<script src="../node_modules/qrcode/build/qrcode.min.js"></script>
 		<script>
+			function openModal() {
+				var modal = document.getElementById('myModal');
+				var accept = document.getElementById('accept');
+				var decline = document.getElementById('decline');
+				// Get the <span> element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
+
+				modal.style.display = "block";
+
+				var accepted = "decline";
+
+				accept.onclick = function() {
+					accepted = "accept";
+				}
+				decline.onclick = function() {
+					accepted = "decline";
+				}
+
+				// When the user clicks on <span> (x), close the modal
+				span.onclick = function() {
+				  modal.style.display = "none";
+				}
+			};
+
 			var http = require("http");
 
 			var options = {
@@ -24,6 +48,10 @@
 			        // print to console when response ends
 			    });
 			});
+
+			if(token != null) {
+				document.getElementById("token").innerHTML = token;
+			}
 
 			window.createQR = function() {
 				QRCode.toCanvas(document.getElementById('canvas'), token, {
@@ -82,9 +110,6 @@
 				connection.send(accepted);
 
 			};
-
-
-
 		</script> 
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     	<!-- <script src="jquery.min.js"></script>
@@ -96,7 +121,7 @@
 			<h1>My ID</h1>
 		</div>
 		<!-- Button trigger modal -->
-		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+		<button type="button" id='onbutton' class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" onclick="openModal()">
 		  Launch demo modal
 		</button>
 
@@ -124,6 +149,7 @@
 		  </div>
 		</div>
 		<canvas id="canvas"></canvas>
+		<p id="token">Token</p>
 		<p>Present this code to confirm your information</p>
 	</body>
 </html>
