--- a/userapp/web/index.html
+++ b/userapp/web/index.html
@@ -32,12 +32,12 @@
 			};
 		</script>
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-  	<title>My ID</title>
+  	<title>SecurID</title>
 	</head>
 
 	<body onload='setup()'>
 		<div class="a">
-			<h1>My ID</h1>
+			<h1>SecurID</h1>
 		</div>
 
 		<!-- Button trigger modal -->
